tests/spec/emit/snapshots/tuple_element_go_interface_pattern_emits_type_switch.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/events"
  
  fn describe(pair: (events.Event, int)) -> int {
    match pair {
      (events.Token(s), _) => s.length(),
      _ => 0,
    }
  }
---
package main

import (
	"example.com/events"
	lisette "github.com/ivov/lisette/prelude"
)

func describe(pair lisette.Tuple2[events.Event, int]) int {
	if func() bool { _, ok := pair.First.(events.Token); return ok }() {
		return len(string(pair.First.(events.Token)))
	}
	return 0
}
