tests/spec/emit/snapshots/tuple_eval_order_captured.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn bump(i: mut Ref<int>) -> int {
    i.* = 1
    10
  }
  
  fn main() {
    let mut i = 0
    let t = (i, bump(&i))
    let _ = t
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func bump(i *int) int {
	*i = 1
	return 10
}

func main() {
	i := 0
	v := i
	t := lisette.MakeTuple2[int, int](v, bump(&i))
	_ = t
}
