tests/spec/emit/snapshots/tuple_field_autofill_uses_constructor.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Probe {
    pub pair: (int, string),
    pub nested: (Option<int>, (int, int)),
  }
  
  fn make() -> Probe {
    Probe { .. }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Probe struct {
	Pair   lisette.Tuple2[int, string]
	Nested lisette.Tuple2[lisette.Option[int], lisette.Tuple2[int, int]]
}

func make_() Probe {
	return Probe{
		Pair:   lisette.MakeTuple2[int, string](0, ""),
		Nested: lisette.MakeTuple2[lisette.Option[int], lisette.Tuple2[int, int]](lisette.MakeOptionNone[int](), lisette.MakeTuple2[int, int](0, 0)),
	}
}
