tests/spec/emit/snapshots/tuple_index_chained_with_method_call.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> Option<int> {
    let items = ([1, 2, 3], [4, 5, 6])
    items.0.get(0)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() (int, bool) {
	items := lisette.MakeTuple2[[]int, []int]([]int{1, 2, 3}, []int{4, 5, 6})
	v := lisette.SliceGet(items.First, 0)
	if v.Tag == lisette.OptionSome {
		return v.SomeVal, true
	}
	return 0, false
}
