tests/spec/emit/snapshots/tuple_interface_slot_implicit_coercion_assign_position.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  import "go:example.com/tea"
  
  struct Model {}
  
  impl Model {
    fn Init(self) -> Option<tea.Cmd> {
      None
    }
    fn Update(self, msg: tea.Msg) -> (tea.Model, Option<tea.Cmd>) {
      let result = match msg {
        _ => (self, Some(tea.Quit)),
      }
      result
    }
    fn View(self) -> string {
      ""
    }
  }
  
  fn main() {
    let _ = tea.NewProgram(Model {} as tea.Model)
  }
---
package main

import (
	"example.com/tea"
	lisette "github.com/ivov/lisette/prelude"
)

type Model struct{}

func (m Model) Init() tea.Cmd {
	return nil
}

func (m Model) Update(msg tea.Msg) (tea.Model, tea.Cmd) {
	var result lisette.Tuple2[Model, lisette.Option[func() tea.Msg]]
	_ = msg
	result = lisette.MakeTuple2[Model, lisette.Option[func() tea.Msg]](m, lisette.MakeOptionSome(tea.Quit))
	tup_1 := result
	opt_2 := tup_1.Second
	var unwrap_3 tea.Cmd
	if opt_2.Tag == lisette.OptionSome {
		unwrap_3 = opt_2.SomeVal
	}
	return tup_1.First, unwrap_3
}

func (m Model) View() string {
	return ""
}

func main() {
	tea.NewProgram(Model{})
}
